other-mpol/label-existing-namespaces/.chainsaw-test/patched-ns02.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels: 
    mykey: myvalue
  name: label-namespace02
