other-mpol/label-existing-namespaces/.chainsaw-test/patched-ns03.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels: 
    foo: bar
    mykey: myvalue
  name: label-namespace03
