other-mpol/label-existing-namespaces/label-existing-namespaces.yaml
apiVersion: policies.kyverno.io/v1
kind: MutatingPolicy
metadata:
  name: label-existing-namespaces
  annotations:
    policies.kyverno.io/title: Label Existing Namespaces
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Namespace
    policies.kyverno.io/description: >-
      Namespaces which preexist may need to be labeled after the fact and it is
      time consuming to identify which ones should be labeled and either doing so manually
      or with a scripted approach. This policy, which triggers on any AdmissionReview request
      to any Namespace, will result in applying the label `mykey=myvalue` to all existing
      Namespaces. If this policy is updated to change the desired label key or value, it will
      cause another mutation which updates all Namespaces.
spec:
  evaluation:
    admission:
      enabled: true
    mutateExisting:
      enabled: true
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["namespaces"]
  mutations:
    - patchType: ApplyConfiguration
      applyConfiguration:
        expression: |
          Object{
            metadata: Object.metadata{
              labels: {
                "mykey": "myvalue"
              }
            }
          }
