other-mpol/label-existing-namespaces/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: label-existing-namespaces
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: crb.yaml
    - apply:
        file: ns.yaml
    - assert:
        file: ns.yaml
  - name: step-02
    try:
    - apply:
        file: ../label-existing-namespaces.yaml
    - assert:
        file: policy-ready.yaml
    - patch:
        resource:
          apiVersion: v1
          kind: Namespace
          metadata:
            name: label-namespace01
            annotations:
              trigger: "true"
    - sleep:
        duration: 15s
    - assert:
        file: patched-ns01.yaml
    - assert:
        file: patched-ns02.yaml
    - assert:
        file: patched-ns03.yaml
